# PDF-RAG

./: .env.example  .gitignore  CHANGELOG.md  Model-to-use-instructions.md  README.md  high_accuracy_local_pdf_rag_proposal.md  pyproject.toml  requirements.txt
.kiro/specs/local-pdf-rag-system/: requirements.md
backend/: __init__.py
backend/app/: __init__.py  cli.py  models.py  rag_service.py
backend/app/api/: main.py
backend/app/api/schemas/: __init__.py  citation.py  document.py  job.py  query.py  response.py  session.py  settings.py
backend/app/core/: config.py  hashing.py  nlp.py  text.py
backend/app/database/: __init__.py  store.py
backend/app/domain/: __init__.py  enums.py  exceptions.py
backend/app/generation/: answer_service.py  answerer.py  extractive_answerer.py  ollama_answerer.py  ollama_client.py  prompts.py
backend/app/indexing/: embeddings.py  full_text_index.py  heading_index.py  index_manager.py  metadata_index.py  phrase_index.py  sparse.py  tree_indexer.py  vector_store.py
backend/app/ingestion/: chunking.py  cleaning.py  heading_detector.py  ingestion_service.py  layout_parser.py  pipeline.py  structure_builder.py
backend/app/knowledge/: __init__.py  okf.py  okf_generator.py  okf_importer.py
backend/app/ports/: __init__.py  interfaces.py
backend/app/retrieval/: confidence.py  confidence_gate.py  context_builder.py  fusion.py  lexical_retriever.py  node_ranker.py  query_analysis.py  query_classifier.py  reranking.py  retrieval_service.py  tree_navigator.py  tree_retriever.py
backend/app/services/: ingestion_service.py  rag_service_v2.py  retrieval_service.py
backend/app/verification/: __init__.py  citation_validator.py  citations.py
backend/app/workers/: __init__.py  jobs.py
backend/tests/: conftest.py  test_answerer.py  test_chunking.py  test_citation_validator.py  test_confidence_gate.py  test_desktop_controller.py  test_desktop_preferences.py  test_desktop_runtime.py  test_extractive_answerer.py  test_fts5_index.py  test_heading_detector.py  test_heading_phrase_index.py  test_index_manager.py  test_ingestion_service.py  test_layout_parser.py  test_legacy_removal.py  test_lexical_retriever.py  test_metadata_store_schema.py  test_model_readiness.py  test_node_ranker.py  test_okf.py  test_ollama_answerer.py  test_pdf_parser.py  test_rag_service.py  test_repositories.py  test_services_retrieval_service.py  test_sparse.py  test_structure_builder.py  test_tree_navigator.py
desktop/: README.md  __init__.py  app.py  controller.py  main_window.py  model_readiness.py  preferences.py  runtime.py  theme.py  workers.py
desktop/packaging/: local_pdf_rag_desktop.spec
docs/: RUNNING.md  apis.md  architecture.md  baseline_2026-07-11.md
frontend/: README.md
scripts/: run_desktop.ps1
(+14 files in other folders)
