[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "local-pdf-rag"
version = "0.1.0"
description = "High-accuracy local PDF RAG with source citations and an optional OKF layer."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
backend = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "pymupdf>=1.24",
  "ollama>=0.3",
  "qdrant-client>=1.10",
]
pdf = [
  "docling>=2.0",
  "pymupdf>=1.24",
]
reranker = [
  "sentence-transformers>=3.0",
  "torch>=2.4",
  "transformers>=4.44",
]
desktop = [
  "PySide6>=6.7",
  "pymupdf>=1.24",
  "pyinstaller>=6.10",
  "numpy>=1.26",
  "pandas>=2.2",
  "ollama>=0.3",
  "bm25s>=0.2",
]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
]

[project.scripts]
local-pdf-rag-desktop = "desktop.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "desktop*"]

[tool.ruff]
line-length = 100
target-version = "py312"
